# cppdoom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
cmake/: config.h.cin
src/: action.cc  action.hh  arglex.cc  arglex.hh  compatibility.cc  compatibility.hh  config.hh  defs.cc  defs.hh  deh.cc  deh.hh  demo.cc  demo.hh  doom.cc  doom.hh  doom_data.cc  doom_data.hh  doom_main.cc  doom_main.hh  doom_type.cc  doom_type.hh  doomdef.hh  doomstat.cc  doomstat.hh  enemy.cc  enemy.hh  enum_ops.hh  event.cc  event.hh  file.cc  file.hh  fixed.cc  fixed.hh  game.cc  game.hh  game_map.cc  game_map.hh  gsl_aliases.hh  info.cc  info.hh  (+57 more)
src/render/: main.cc  main.hh
src/win/: getline.c  getline.h
